# RustPasswordManager

./: .gitignore  Cargo.toml  TODO.md  texts_eng.toml
src/: AuthenticationStateItem.rs  MainMenuStateItem.rs  StartupStateItem.rs  StateItem.rs  StateManager.rs  Transition.rs  add_account_state_item.rs  add_entry_state_item.rs  authentication_state_item.rs  clipboard_controller.rs  database_context.rs  encryption_controller.rs  file_accesssor.rs  input_handler.rs  list_accounts_state.rs  list_accounts_state_item.rs  list_entries_state.rs  main.rs  main_menu_state_item.rs  page_list_view.rs  password_widget.rs  set_authentication_state_item.rs  show_account_state_item.rs  startup_state_item.rs  state_item.rs  state_manager.rs  terminal_context.rs  texts.rs  transition.rs  widget.rs  wipe_database_state_item.rs
src/logic/: add_account_logic.rs  authentication_logic.rs  controller.rs  mod.rs  test_controller.rs
src/models/: account_model.rs  database.rs  mod.rs
src/terminal/: mod.rs  terminal_context.rs
src/utilities/: file_accesssor.rs  mod.rs
src/views/: mod.rs  test_view.rs  view.rs
src/widgets/: label.rs  mod.rs  render_info.rs  widget.rs
