[package]
name = "PasswordManager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rpassword = "7.3.1"
aes-gcm = "0.10.3"
clipboard = "0.5.0"
serde = {version = "1.0.208", features = ["derive"]}
serde_json = "1.0.125"
directories = "5.0.1"
zeroize = "1.8.1"
crossterm = "0.28.1"
crossterm_input = "0.5.0"
ring = "0.17.8"
base64 = "0.22.1"
rusqlite = "0.32.1"